--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,16 @@
 
+2014-02-28  Maxime Doyen
+
+ Made 4.5.6 release.
+
+ * bugfix: #1285326	export transactions to csv. Concat [dot]csv to filename 
+ * bugfix: #1285164	tags not well sorted when mixed with blank
+ * bugfix: #1277622	problem with the split transaction and the Vehicle cost feature
+ * bugfix: #1276377	qif import shows 0 items
+ * bugfix: #1275534	Balances not updated with sheduled transactions
+ * wish  : #1273848	insert scheduled more than 92 days in advance
+
+
 2014-01-26  Maxime Doyen
 
  Made 4.5.5 release.
