--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,32 @@
 
 
+2015-03-28  Maxime Doyen
+
+ Made 5.0.1  rc release.
+
+ * change: xhb data file format (v1.1)
+ * wish  : #1432204 inherit txn should set status to none
+ * wish  : #1421326 "Fill from template" showed by default
+ * wish  : #1419986 reconciled icons, text and translation
+ * wish  : #1413874 keyboard shortcut to transaction none status
+ * wish  : #1377640 txn same consecutive entry
+ * wish  : #926782  for transfers, display target/source account as payee 
+ * bugfix: #1429410 document the "Cleared" ("Pointée") operation status
+ * bugfix: #1429407 shortcut clashes with search or other text entry widgets
+ * bugfix: #1427798 -0,00€ for total of account
+ * bugfix: #1427112 status of template transactions is ignored
+ * bugfix: #1425986 QIF import sometimes fails in v5.0
+ * bugfix: #1424437 gtk warning from console
+ * bugfix: #1422617 trend time report shows dates from closed accounts
+ * bugfix: #1420495 typo problem in chart tooltip (apos)
+ * bugfix: #1420098 ctrl+w no longer closes account window
+ * bugfix: #1419992 visible column names are not localized in preferences dialog
+ * bugfix: #1419975 not all languages updates were imported for 5.0
+ * bugfix: #1419476 edit transaction dialog empty category
+ * bugfix: #1419304 crash if Balance report is open and transaction is deleted
+ * bugfix: #1415740 budget line with value of 0 not shown in Budget Report
+
+
 2015-02-08  Maxime Doyen
 
  Made 5.0  release.
@@ -276,7 +303,7 @@
  * wish  : #730137  portable app for ms-windows
  * wish  : #730319  single click in calendar to choose date 
  * wish  : #787131 Column titles in exported CSV
- * wish  : #787134 exporting to CSV should include all available columns
+ * wish  : #787134 csv add import/export for tags
  * wish  : #833614 sorting on category / subcategory in statistics report
  * wish  : #856477 improve category dropdown with +/-
  * wish  : #886372 poland in the European country list
