--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,26 @@
 
+2015-10-xx  Maxime Doyen
+
+ Made 5.0.6 release.
+
+* bugfix: #1504514 next Previous buttons not translated when importing ofx file
+* bugfix: #1504359 assignment with same name should not be possible
+* bugfix: #1503682 app crash opening a file from previous version
+* bugfix: #1502997 || input in split should not be possible
+* bugfix: #1502496 auto assignment don't set payee on split txn
+* bugfix: #1502444 auto assignment can mark untouched txn as changed
+* bugfix: #1502034 translate homebank.appdata.xml
+* bugfix: #1501968 splits without category are lost during QIF import
+* bugfix: #1501962 statistics report crashes HomeBank after adding a new tag
+* bugfix: #1501144 auto assignment changes split category when only payee is defined in assignment definition
+* bugfix: #1501138 wrong number of txns in pop-up after auto assignment
+* bugfix: #1501129 auto assignment dialog not active when no category defined
+* bugfix: #1501098 litre symbol is not translatable
+* bugfix: #1500043 remove period from short description
+* bugfix: #1498622 translation: add developer note to FI Fee
+* bugfix: #1497630 translation: typing errors
+* bugfix: #1497521 txn dialog +/- button reset amount to 0 
+
 
 2015-09-19  Maxime Doyen
 
@@ -11,7 +33,7 @@
 
  Made 5.0.4 release.
 
- * change: win32: upgraded to gtk+ 3.16
+ * change: win32: upgraded to gtk+ 3.16.6
  * change: amount toggle sign button changed from text button to entry icon
  * change: added/changed transaction are always showed by default filter
  * bugfix: #1492634 using memo filter does not list memos in split catagories
